@@ -1,5 +1,10 @@
 #!/bin/bash
 
+if ! tests/travis/is_core_changed.sh
+then
+  exit 0
+fi
+
 if [ ${TASK} == "lint" ]; then
     make lint || exit -1
     echo "Check documentations of c++ code..."
@@ -56,31 +61,29 @@ if [ ${TASK} == "r_test" ]; then
 
     set -e
     export _R_CHECK_TIMINGS_=0
-
     wget https://cran.rstudio.com/bin/macosx/R-latest.pkg  -O /tmp/R-latest.pkg
-    wget https://xquartz-dl.macosforge.org/SL/XQuartz-2.7.8.dmg -O /tmp/XQuartz-2.7.8.dmg
     sudo installer -pkg "/tmp/R-latest.pkg" -target /
-    sudo hdiutil attach /tmp/XQuartz-2.7.8.dmg
-    cd /Volumes/XQuartz-2.7.8
-    sudo installer -pkg "XQuartz.pkg" -target /
-    cd -
     Rscript -e "install.packages('devtools', repo = 'https://cran.rstudio.com')"
-    Rscript -e "install.packages('imager', repo = 'https://cran.rstudio.com', type = 'source')"
     cd R-package
     Rscript -e "library(devtools); library(methods); options(repos=c(CRAN='https://cran.rstudio.com')); install_deps(dependencies = TRUE)"
     cd ..
+
     make rpkg
     R CMD check --no-examples --no-manual --no-vignettes --no-build-vignettes mxnet_*.tar.gz
     R CMD INSTALL mxnet_*.tar.gz
 
     Rscript tests/travis/r_vignettes.R
 
-    wget http://webdocs.cs.ualberta.ca/~bx3/data/Inception.zip
+    wget http://data.dmlc.ml/mxnet/data/Inception.zip
     unzip Inception.zip && rm -rf Inception.zip
     wget https://s3-us-west-2.amazonaws.com/mxnet/train.csv -O train.csv
     wget https://s3-us-west-2.amazonaws.com/mxnet/test.csv -O test.csv
 
-    cat *.R > r_test.R
+    cat CallbackFunctionTutorial.R \
+    fiveMinutesNeuralNetwork.R \
+    mnistCompetition.R \
+    classifyRealImageWithPretrainedModel.R \
+    ndarrayAndSymbolTutorial.R > r_test.R
 
     Rscript r_test.R || exit -1
 
@@ -109,7 +112,6 @@ if [ ${TASK} == "python_test" ]; then
 fi
 
 if [ ${TASK} == "scala_test" ]; then
-    export MAVEN_OPTS="-Xmx256m -XX:MaxPermSize=128m"
     if [ ${TRAVIS_OS_NAME} == "osx" ]; then
         LIB_GOMP_PATH=`find /usr/local/lib -name libgomp.dylib | grep -v i386 | head -n1`
         ln -sf $LIB_GOMP_PATH /usr/local/lib/libgomp.dylib
@@ -124,6 +126,6 @@ if [ ${TASK} == "scala_test" ]; then
 
     make scalapkg || exit -1
     make scalatest || exit -1
-    
+
     exit 0
 fi
